test_data/valid/1.1_two_bricks_stacked_vertically.ldr
0 Two bricks stacked vertically
1 4 0 -8 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 0 -32 0 1 0 0 0 1 0 0 0 1 3001.dat