test_data/invalid/2.7_vertical_intersection.ldr
0 Vertical intersection
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 0 -40 0 1 0 0 0 1 0 0 0 1 3001.dat